crates/agentprof-adapters/tests/snapshots/analyzer_on_fixtures__analysis__minimal.snap
---
source: crates/agentprof-adapters/tests/analyzer_on_fixtures.rs
expression: report
---
{
  "meta": {
    "id": "00000000-0000-0000-0000-000000000001",
    "agent": "copilot",
    "producer": "copilot-agent",
    "agent_version": "1.0.54",
    "started_at": "2026-05-26T10:00:00Z",
    "cwd": "/tmp/agentprof-fixture/minimal",
    "repository": "fixture/minimal",
    "branch": "main",
    "is_live": false
  },
  "turn_summary": [
    {
      "turn_id": "00000000-0000-0000-0000-000000000012",
      "started_at": "2026-05-26T10:00:02Z",
      "duration": 2000,
      "status": "Completed",
      "model": "gpt-5-mini",
      "mode": "Interactive",
      "output_tokens": 10,
      "tool_call_count": 0,
      "hook_call_count": 0,
      "skill_call_count": 0
    }
  ],
  "tool_rank": [],
  "hook_rank": [],
  "warnings": []
}
