crates/agentprof-adapters/tests/snapshots/analyzer_on_fixtures__analysis__orphan-skill-mix.snap
---
source: crates/agentprof-adapters/tests/analyzer_on_fixtures.rs
assertion_line: 64
expression: report
---
{
  "meta": {
    "id": "00000000-0000-0000-0000-00000000c300",
    "agent": "copilot",
    "producer": "copilot-agent",
    "agent_version": "1.0.54",
    "started_at": "2026-06-03T10:00:00Z",
    "cwd": "/tmp/agentprof-fixture/orphan-skill-mix",
    "is_live": false
  },
  "turn_summary": [
    {
      "turn_id": "00000000-0000-0000-0000-00000000c302",
      "started_at": "2026-06-03T10:00:02Z",
      "duration": 4000,
      "status": "Completed",
      "model": "gpt-5-mini",
      "mode": "Interactive",
      "output_tokens": 10,
      "tool_call_count": 1,
      "hook_call_count": 0,
      "skill_call_count": 0
    }
  ],
  "tool_rank": [
    {
      "name": "bash",
      "source": {
        "kind": "builtin"
      },
      "call_count": 1,
      "success_count": 1,
      "failure_count": 0,
      "orphan_count": 0,
      "user_requested_count": 0,
      "total_duration": 1000,
      "p50_duration": 1000,
      "p95_duration": 1000,
      "max_duration": 1000,
      "is_user_blocking": false
    },
    {
      "name": "<orphan>",
      "source": {
        "kind": "builtin"
      },
      "call_count": 1,
      "success_count": 0,
      "failure_count": 0,
      "orphan_count": 1,
      "user_requested_count": 0,
      "total_duration": 0,
      "p50_duration": 0,
      "p95_duration": 0,
      "max_duration": 0,
      "is_user_blocking": false
    }
  ],
  "hook_rank": [],
  "warnings": [
    {
      "SynthesizedStart": {
        "kind": "ToolExecStart",
        "end_event_id": "00000000-0000-0000-0000-00000000c307"
      }
    }
  ]
}
