crates/agentprof-adapters/tests/snapshots/analyzer_on_fixtures__analysis__with-mcp-calls.snap
---
source: crates/agentprof-adapters/tests/analyzer_on_fixtures.rs
expression: report
---
{
  "meta": {
    "id": "00000000-0000-0000-0000-000000000004",
    "agent": "copilot",
    "producer": "copilot-agent",
    "agent_version": "1.0.54",
    "started_at": "2026-05-26T12:00:00Z",
    "cwd": "/tmp/agentprof-fixture/with-mcp-calls",
    "is_live": false
  },
  "turn_summary": [
    {
      "turn_id": "00000000-0000-0000-0000-000000000042",
      "started_at": "2026-05-26T12:00:02Z",
      "duration": 6000,
      "status": "Completed",
      "model": "gpt-5-mini",
      "mode": null,
      "output_tokens": 30,
      "tool_call_count": 2,
      "hook_call_count": 0,
      "skill_call_count": 0
    }
  ],
  "tool_rank": [
    {
      "name": "mcp__filesystem__read_file",
      "source": {
        "kind": "mcp",
        "server": "filesystem"
      },
      "call_count": 1,
      "success_count": 1,
      "failure_count": 0,
      "orphan_count": 0,
      "user_requested_count": 0,
      "total_duration": 1000,
      "p50_duration": 1000,
      "p95_duration": 1000,
      "max_duration": 1000
    },
    {
      "name": "mcp__github__search_issues",
      "source": {
        "kind": "mcp",
        "server": "github"
      },
      "call_count": 1,
      "success_count": 1,
      "failure_count": 0,
      "orphan_count": 0,
      "user_requested_count": 0,
      "total_duration": 1000,
      "p50_duration": 1000,
      "p95_duration": 1000,
      "max_duration": 1000
    }
  ],
  "hook_rank": [],
  "warnings": []
}
